--- a/.travis.yml
+++ b/.travis.yml
@@ -38,20 +38,20 @@ script:
   - cd ..
 
 after_success:
-  - if [ "$TRAVIS_BRANCH" == "fix-docker-building" ]; then
-    git clone https://github.com/VitalElement/AvalonBuild.git; 
-    cd AvalonBuild;
-    git rm -rf .;
-    git clean -fxd; 
-    cd ..;
-    cp -a ./AvalonStudioBuild/bin/Release/. ./AvalonBuild/; 
-    cd AvalonBuild;
-    git add .;
-    git commit -m 'new CI revision.' || true; 
-    git push -f -q https://VitalElement:$GH_TOKEN@github.com/VitalElement/AvalonBuild master &2>/dev/null;
-    docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
-    docker images;
-    docker push vitalelement/avalon:cibuild;
+  - if [ "$TRAVIS_BRANCH" == "master" ]; then
+      git clone https://github.com/VitalElement/AvalonBuild.git; 
+      cd AvalonBuild;
+      git rm -rf .;
+      git clean -fxd; 
+      cd ..;
+      cp -a ./AvalonStudioBuild/bin/Release/. ./AvalonBuild/; 
+      cd AvalonBuild;
+      git add .;
+      git commit -m 'new CI revision.' || true; 
+      git push -f -q https://VitalElement:$GH_TOKEN@github.com/VitalElement/AvalonBuild master &2>/dev/null;
+      docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
+      docker images;
+      docker push vitalelement/avalon:cibuild;
     fi
 
 notifications:
