add utility for checking and running shell commands

--- a/AvalonStudio/AvalonStudio.Toolchains.TypeScript/AvalonStudio.Toolchains.TypeScript.csproj
+++ b/AvalonStudio/AvalonStudio.Toolchains.TypeScript/AvalonStudio.Toolchains.TypeScript.csproj
@@ -80,6 +80,8 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TypeScriptToolchain.cs" />
+    <Compile Include="Utilities\PlatformSupport.cs" />
+    <Compile Include="Utilities\ShellExecutorType.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AvalonStudio.Extensibility\AvalonStudio.Extensibility.csproj">
