add TSBridge submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "nclang"]
 	path = nclang
 	url = https://github.com/VitalElement/nclang.git
+[submodule "TSBridge"]
+	path = TSBridge
+	url = https://github.com/0xFireball/TSBridge.git
