add specialized fork of TSBridge

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "TSBridge"]
 	path = TSBridge
 	url = https://github.com/0xFireball/TSBridge.git
+[submodule "TSBridge.AvalonStudio"]
+	path = TSBridge.AvalonStudio
+	url = https://github.com/IridiumIon/TSBridge.AvalonStudio.git
