--- a/AvalonStudio/AvalonStudio/AvalonStudio.csproj
+++ b/AvalonStudio/AvalonStudio/AvalonStudio.csproj
@@ -460,6 +460,10 @@
       <Project>{48a302ff-ece3-4231-8112-688d0e48921e}</Project>
       <Name>AvalonStudio.Languages.CSharp</Name>
     </ProjectReference>
+    <ProjectReference Include="..\AvalonStudio.Languages.TypeScript\AvalonStudio.Languages.TypeScript.csproj">
+      <Project>{23829bba-0bb8-4d7c-84d3-2fa2e69840e7}</Project>
+      <Name>AvalonStudio.Languages.TypeScript</Name>
+    </ProjectReference>
     <ProjectReference Include="..\AvalonStudio.Projects.CPlusPlus\AvalonStudio.Projects.CPlusPlus.csproj">
       <Project>{47E266EA-BBC4-4794-96DA-B1F3ECB5BB9B}</Project>
       <Name>AvalonStudio.Projects.CPlusPlus</Name>
