--- a/AvalonStudio/AvalonStudio.Projects.TypeScript/AvalonStudio.Projects.TypeScript.csproj
+++ b/AvalonStudio/AvalonStudio.Projects.TypeScript/AvalonStudio.Projects.TypeScript.csproj
@@ -86,6 +86,10 @@
     <Compile Include="TypeScriptProject.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\TSBridge.AvalonStudio\TSBridge\TSBridge\TSBridge.csproj">
+      <Project>{90fcc510-9e0a-4781-a3b6-22cc089029b5}</Project>
+      <Name>TSBridge</Name>
+    </ProjectReference>
     <ProjectReference Include="..\AvalonStudio.Extensibility\AvalonStudio.Extensibility.csproj">
       <Project>{5614AA2F-2B01-4E0D-807E-924680C570ED}</Project>
       <Name>AvalonStudio.Extensibility</Name>
