fix travis script by syncing submodules and updating them.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ mono:
 solution: AvalonStudio.sln
 before_install:
   - cd AvalonStudio 
+  - git submodule sync
+  - git submodule update --init --recursive
   - sudo ./dependencies.sh
 
 install:  
